--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -1,7 +1,7 @@
 {% extends "baselib.html" %}
 
 {% block title %}
-Enquiries
+Sign_up
 {% endblock %}
 
 {% block content %}
@@ -17,9 +17,10 @@ Enquiries
         {% endfor %}
     {% endwith %}
     <form method="POST">
-        Username: <input type="text" name="username" required><br>
-        Email: <input type="email" name="email" required><br>
-        Password: <input type="password" name="password" required><br>
+        Username: <input type="text" id="username" name="username" required><br>
+        Email: <input type="email" id="email" name="email" required><br>
+        Password: <input type="password" id="password" name="password" required><br>
+        Confirm Password: <input type="password" id="confirm_password" name="confirm_password" required><br>
         <button type="submit">Register</button>
     </form>
     <p><a href="/login">Back to Login</a></p>
