--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -1,20 +1,24 @@
 {% extends "baselib.html" %}
 
-{% block title %}Forgot password
+{% block title %}
+Reset_password
 {% endblock %}
 
 {% block content %}
 <html lang="en">
 <head>
-    <title>Forgot Password</title>
+    <title>Reset Password</title>
 </head>
 <body>
-    <h1>Forgot Password</h1>
+    <h1>Reset Password for {{ username }}</h1>
     <form method="POST">
-        <label for="email">Enter your email:</label>
-        <input type="email" id="email" name="email" required>
+        <label for="password">New Password:</label>
+        <input type="password" id="password" name="password" required>
         <br>
-        <button type="submit">Submit</button>
+        <label for="confirm_password">Confirm Password:</label>
+        <input type="password" id="confirm_password" name="confirm_password" required>
+        <br>
+        <button type="submit">Reset Password</button>
     </form>
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
