--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -13,6 +13,11 @@
                     <a class="nav-link {% if request.path == '/' %}active text-warning{% else %}text-light{% endif %}" href="/">HOME</a>
                 </li>
 
+                <!-- Bookstore -->
+                <li class="nav-item">
+                    <a class="nav-link {% if request.path == '/bookstore' %}active text-warning{% else %}text-light{% endif %}" href="/bookstore">BOOKSTORE</a>
+                </li>
+
                 <!-- Library -->
                 <li class="nav-item">
                     <a class="nav-link {% if request.path == '/library' %}active text-warning{% else %}text-light{% endif %}" href="/library">LIBRARY</a>
