--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -39,7 +39,7 @@
                 </li>
                 <!-- Admin -->
                 <li class="nav-item">
-                    <a class="nav-link {% if request.path == '/events' %}active text-warning{% else %}text-light{% endif %}" href="/admin">ADMIN</a>
+                    <a class="nav-link {% if request.path == '/admin' %}active text-warning{% else %}text-light{% endif %}" href="/admin">ADMIN</a>
                 </li>
                 <!-- Check if the user is logged in -->
             </ul>
